--- a/app/src/main/res/layout/fragment_check_out.xml
+++ b/app/src/main/res/layout/fragment_check_out.xml
@@ -8,19 +8,19 @@
     android:orientation="vertical">
 
 
-
     <LinearLayout
         android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:background="@color/green"
-        android:orientation="vertical"
-        android:layout_height="wrap_content">
+        android:orientation="vertical">
+
         <ImageView
             android:id="@+id/navigation"
             android:layout_width="45dp"
             android:layout_height="45dp"
+            android:layout_marginLeft="@dimen/_7sdp"
             android:layout_marginTop="@dimen/_10sdp"
             android:minHeight="?attr/actionBarSize"
-            android:layout_marginLeft="@dimen/_7sdp"
             android:padding="@dimen/_2sdp"
             android:src="@drawable/menue"
             android:tint="@android:color/white" />
@@ -39,18 +39,20 @@
 
                 <LinearLayout
                     android:layout_width="wrap_content"
-                    android:orientation="vertical"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
                     <ImageView
                         android:id="@+id/Back"
                         android:layout_width="50dp"
                         android:layout_height="30dp"
                         android:src="@drawable/back_icon" />
+
                     <ImageView
                         android:layout_width="50dp"
-                        android:visibility="invisible"
                         android:layout_height="20dp"
-                        android:src="@drawable/back_icon" />
+                        android:src="@drawable/back_icon"
+                        android:visibility="invisible" />
                 </LinearLayout>
 
                 <TextView
@@ -67,14 +69,15 @@
 
         </android.support.v7.widget.Toolbar>
     </LinearLayout>
+
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:orientation="vertical"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -102,20 +105,20 @@
                 <TextView
                     android:id="@+id/tvLocation"
                     android:layout_width="wrap_content"
-                    android:textStyle="bold"
                     android:layout_height="wrap_content"
                     android:text="Location, Location, Location"
-                    android:textSize="20dp" />
+                    android:textSize="20dp"
+                    android:textStyle="bold" />
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
-                android:textStyle="bold"
-                android:padding="@dimen/_5sdp"
                 android:layout_marginTop="15dp"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:padding="@dimen/_5sdp"
+                android:textStyle="bold">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -166,8 +169,8 @@
                         android:layout_height="wrap_content"
                         android:text="Items:"
                         android:textColor="#000"
-                        android:textStyle="bold"
-                        android:textSize="20dp" />
+                        android:textSize="20dp"
+                        android:textStyle="bold" />
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -175,30 +178,32 @@
                         android:layout_marginLeft="10dp"
                         android:text="0"
                         android:textColor="#000"
-                        android:textSize="20dp" />
+                        android:textSize="20dp"
+                        android:textStyle="bold" />
                 </LinearLayout>
 
                 <LinearLayout
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="110dp"
-                    android:orientation="horizontal">
+                    android:gravity="end"
+                    android:orientation="horizontal"
+                    android:paddingRight="@dimen/_20sdp">
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Total:"
-                        android:textStyle="bold"
+                        android:text="Total:   "
                         android:textColor="#000"
-                        android:textSize="20dp" />
+                        android:textSize="20dp"
+                        android:textStyle="bold" />
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="10dp"
-                        android:textStyle="bold"
                         android:text="200SAR"
-                        android:textSize="20dp" />
+                        android:textSize="20dp"
+                        android:textStyle="bold" />
                 </LinearLayout>
             </LinearLayout>
 
@@ -241,8 +246,6 @@
             </LinearLayout>
         </LinearLayout>
     </ScrollView>
-
-
 
 
 </LinearLayout>
