--- a/app/src/main/res/layout/item_store.xml
+++ b/app/src/main/res/layout/item_store.xml
@@ -43,11 +43,13 @@
                         android:layout_height="wrap_content"
                         android:layout_alignParentBottom="true"
                         android:layout_alignParentEnd="true"
-                        android:layout_marginRight="@dimen/_3sdp"
                         android:background="@drawable/rounded"
                         android:paddingBottom="@dimen/_2sdp"
                         android:paddingTop="@dimen/_2sdp"
+                        android:paddingLeft="@dimen/_5sdp"
+                        android:paddingRight="@dimen/_5sdp"
                         android:text="10 miles"
+                        android:alpha="0.9"
                         android:textColor="#86C65F"
                         android:textSize="16dp" />
 
@@ -79,7 +81,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="#ffffff"
+                android:background="@drawable/layoout_shape_gradient"
                 android:orientation="horizontal"
                 android:padding="10dp">
 
